# agent-component-library

./: .gitignore  AUDIT_PROMPT.md  Makefile  README.md  THIRD_PARTY_REVIEW.md  index.yaml  pyproject.toml
audit/: STANDARDS.md  (+1 more)
hermes/: __init__.py  pyproject.toml
hermes/acp-adapter/: MODULES.md  README.md  api.py  component.yaml
hermes/acp-adapter/modules/acp_adapter/: events.py  permissions.py  session.py
hermes/agent-engine/: component.yaml
hermes/agent-engine/modules/agent/: bedrock_adapter.py  image_gen_registry.py  model_metadata.py  nous_rate_guard.py  prompt_builder.py  title_generator.py  tool_dispatch_helpers.py  verification_evidence.py  verification_stop.py
hermes/audit/: undecomposed_manifest.json  审查报告-2026-06-27-v2.md  审查报告-2026-06-27.md  审查报告.md  缺失模块拆解评估.md
hermes/audit/progress/: 2026-06-26-001-改进汇报1.md
hermes/cli/: README.md  api.py  component.yaml
hermes/cli/modules/agent/: skill_bundles.py
hermes/cli/modules/hermes_cli/: banner.py  blueprint_cmd.py  callbacks.py  checkpoints.py  cli_agent_setup_mixin.py  clipboard.py  goals.py  gui_uninstall.py  kanban_specify.py  mcp_catalog.py  oneshot.py  plugins_cmd.py  profile_distribution.py  skills_config.py
hermes/cron/: api.py
hermes/cron/modules/cron/: suggestions.py
hermes/entry-points/: MODULES.md  api.py
hermes/entry-points/hermes/modules/: toolsets.py  trajectory_compressor.py
hermes/entry-points/modules/: batch_runner.py  hermes_time.py  mini_swe_runner.py  model_tools.py
hermes/gateway/: component.yaml
hermes/infrastructure/: MODULES.md  api.py
hermes/memory-system/: README.md  component.yaml
hermes/security/: api.py
hermes/skill-system/: MODULES.md  README.md  api.py  component.yaml
hermes/spec/interfaces/: context-management.yaml  llm-calling.yaml  memory-provider.yaml  platform-registry.yaml  provider-profile.yaml
hermes/state-management/: api.py  component.yaml
hermes/tests/: conftest.py
hermes/tests/components/: test_api_structure.py
hermes/tests/integration/: test_component_dependencies.py
hermes/tests/lint/: check_import_isolation.py
hermes/tui/: MODULES.md  component.yaml
(+306 files in other folders)
