[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-component-library"
version = "2.0.0"
description = "AI Agent组件库 Monorepo — 多框架组件集合"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/fclwtt/agent-component-library"

[tool.setuptools.packages.find]
where = ["hermes-component", "magic-orange-component"]
include = ["hermes_component*", "magic_orange_component*"]
